Start adding support for emscripten/html5
This makes lots of emscripten related changes throughout rig

Note: instead of adding emscripten to our autoconf/automake build
scripts it's more important that native builds of Rig can be distributed
with source and an application built with Rig can be compiled and
packaged for deployment as a html5 application.

This adds vanilla gnu Makefiles (Makefile.emscripten) that can be
installed and used by tools to build Rig.

This adds an initial rig-package-html5 helper script

This script can be distributed with Rig so that developers can compile
and package an application for distribution as a html5 application. This
is simply a prototype script for now. Eventually it should be possible
to control packaging from the Rig ui and any text based tool should
be updated to be more portable.

A lot of changes were made to remove play mode + make the simulator
responsible for ui loading to help minimize the responsibility of
a web based frontend:

This work is aiming to remove some of the complexity around the
simulator and frontend having to track whether it is currently in play
or edit mode and instead we will aim for that concept to be internal to
the editor, probably by making the editor manage separate
frontend+simulator pairs for edit and play mode and it will composite
the rendering from those nested frontends via its own frontend.

To be better suited to web based usage models with a web client acting
as a frontend this allows the simulator to be responsible for loading a
.rig file and defining canonical object IDs.  This removed the need for
allocating temporary IDs while we don't have a need for the frontend to
create its own objects.

--- a/toys/Makefile.am
+++ b/toys/Makefile.am
@@ -9,6 +9,11 @@ AM_CPPFLAGS = \
 	-I$(top_builddir)/clib/src \
 	-I$(top_srcdir)/LibOVR/Src
 
+if USE_UV
+AM_CPPFLAGS += -I$(top_srcdir)/h2o/include
+AM_CPPFLAGS += -I$(top_srcdir)/h2o
+endif
+
 AM_CFLAGS = \
 	$(COGL_DEP_CFLAGS) \
 	$(COGL_EXTRA_CFLAGS) \
@@ -17,17 +22,6 @@ AM_CFLAGS = \
 
 AM_CFLAGS += -DCG_EXAMPLES_DATA=\""$(abs_top_srcdir)/toys/"\"
 
-
-if EMSCRIPTEN
-common_ldadd = \
-	$(RIG_EXTRA_LDFLAGS) \
-	$(top_builddir)/rut/librut.la \
-	$(top_builddir)/cogl/libcg.la \
-	$(RIG_DEP_LIBS) \
-	$(COGL_DEP_LIBS) \
-	$(top_builddir)/clib/src/libclib.la \
-	$(LIBM)
-else
 common_ldadd = \
 	$(RIG_EXTRA_LDFLAGS) \
 	$(top_builddir)/rut/librut.la \
@@ -38,7 +32,6 @@ common_ldadd = \
 	$(top_builddir)/clib/src/libclib.la \
 	-lstdc++ \
 	$(LIBM)
-endif
 
 if EDITOR_ENABLED
 common_ldadd += $(top_builddir)/cogl-pango/libcogl-pango2.la
@@ -120,15 +113,10 @@ emscripten_programs += cogl-emscripten-hello
 cogl_emscripten_hello_SOURCES = cogl-emscripten-hello.c
 cogl_emscripten_hello_LDADD = $(common_ldadd)
 
-if EMSCRIPTEN
-programs += $(emscripten_programs)
-
-emscripten_libs = --js-library $(top_srcdir)/cogl/cogl-emscripten-lib.js
-
-%.html: %.o $(top_builddir)/rut/librut.bc $(top_builddir)/cogl/libcg.bc $(top_builddir)/clib/src/clib.bc
-	$(CC) $(AM_CFLAGS) $(CFLAGS) $(RIG_EXTRA_EMCC_JSFLAGS) $(emscripten_libs) --js-library $(top_srcdir)/toys/emscripten-example-js-library.js -o $@ $^
-
-all-local: $(addsuffix .html, $(emscripten_programs))
+if USE_UV
+programs += websocket
+websocket_SOURCES = websocket.c
+websocket_LDADD = $(common_ldadd) $(top_builddir)/h2o/libh2o.la -lssl -lcrypto
 endif
 
 noinst_PROGRAMS = $(programs)
