--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,9 @@ if EDITOR_ENABLED
 SUBDIRS += xdgmime
 endif
 
+if OCULUS_RIFT
 SUBDIRS += LibOVR
+endif
 
 SUBDIRS += rut data rig tests toys po android
 
