Add libyuv snapshot
For experimenting with adding camera support to Rig this adds a snapshot
of libyuv for handling a wide range of standard yuv to argb format
conversions.

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,7 +18,7 @@ endif
 
 SUBDIRS += LibOVR
 
-SUBDIRS += rut data rig tests toys po android
+SUBDIRS += rut data rig tests libyuv toys po android
 
 SUBDIRS += tools
 
