--- a/configure.ac
+++ b/configure.ac
@@ -585,6 +585,7 @@ data/Info.plist
 rig/Makefile
 rig/rig-defines.h
 toys/Makefile
+libyuv/Makefile
 tools/Makefile
 research/particle-engine/Makefile
 research/particle-engine/pe/Makefile
