--- a/rig/Makefile.sources
+++ b/rig/Makefile.sources
@@ -81,6 +81,7 @@ rig_common_sources = \
 	rig-code.c \
 	rig-code-module.h \
 	rig-code-module.c \
+	rig-c.c \
 	usc_impl.h \
 	usc_impl.c \
 	rig-text-pipeline-cache.h \
@@ -129,5 +130,4 @@ rig_slave_sources = \
 
 rig_device_sources =
 
-rig_simulator_sources = \
-	rig-c.c
+rig_simulator_sources =
