--- a/cogl-path/Makefile.am
+++ b/cogl-path/Makefile.am
@@ -48,7 +48,7 @@ noinst_LTLIBRARIES = libcogl-path.la
 
 libcogl_path_la_SOURCES = $(source_c) $(source_h)
 libcogl_path_la_CFLAGS = $(COGL_DEP_CFLAGS) $(COGL_GST_DEP_CFLAGS) $(COGL_EXTRA_CFLAGS) $(MAINTAINER_CFLAGS)
-libcogl_path_la_LIBADD = $(top_builddir)/clib/src/libclib.la
+libcogl_path_la_LIBADD = $(top_builddir)/clib/clib/libclib.la
 libcogl_path_la_LIBADD += $(top_builddir)/cogl/libcg.la
 libcogl_path_la_LIBADD += $(COGL_DEP_LIBS) $(COGL_GST_DEP_LIBS) $(COGL_EXTRA_LDFLAGS)
 libcogl_path_la_LDFLAGS = -static
@@ -57,8 +57,8 @@ AM_CPPFLAGS = \
 	-DCG_COMPILATION \
 	-DG_LOG_DOMAIN=\"CoglPath\" \
 	-I$(top_srcdir)/libuv/include \
-	-I$(top_srcdir)/clib/src \
-	-I$(top_builddir)/clib/src \
+	-I$(top_srcdir)/clib/clib \
+	-I$(top_builddir)/clib/clib \
 	-I$(srcdir)/tesselator \
 	-I$(top_srcdir)/cogl \
 	-I$(top_builddir)/cogl \
