--- a/test-fixtures/Makefile.am
+++ b/test-fixtures/Makefile.am
@@ -6,8 +6,8 @@ libtest_fixtures_la_CPPFLAGS = \
 	-I$(top_builddir) \
 	-I$(top_srcdir)/libuv/include \
 	-I$(top_builddir)/cogl \
-	-I$(top_srcdir)/clib/src \
-	-I$(top_builddir)/clib/src \
+	-I$(top_srcdir)/clib/clib \
+	-I$(top_builddir)/clib/clib \
 	-Wall \
 	$(NULL)
 
