--- a/tests/conform/Makefile.am
+++ b/tests/conform/Makefile.am
@@ -128,8 +128,8 @@ BUILT_SOURCES = wrappers
 AM_CPPFLAGS = \
 	-I$(top_srcdir) \
 	-I$(top_builddir) \
-	-I$(top_srcdir)/clib/src \
-	-I$(top_builddir)/clib/src	\
+	-I$(top_srcdir)/clib/clib \
+	-I$(top_builddir)/clib/clib	\
 	-I$(top_builddir)/cogl \
 	-I$(top_srcdir)/test-fixtures
 
@@ -147,7 +147,7 @@ test_conformance_LDADD = \
 if BUILD_COGL_PATH
 test_conformance_LDADD += $(top_builddir)/cogl-path/libcogl-path.la
 endif
-test_conformance_LDADD += $(top_builddir)/clib/src/libclib.la
+test_conformance_LDADD += $(top_builddir)/clib/clib/libclib.la
 test_conformance_LDFLAGS = -export-dynamic
 
 test: wrappers
