--- a/toys/Makefile.am
+++ b/toys/Makefile.am
@@ -16,8 +16,8 @@ AM_CPPFLAGS = \
 	$(RIG_DEP_CFLAGS)
 
 if USE_UV
-AM_CPPFLAGS += -I$(top_srcdir)/h2o/include
-AM_CPPFLAGS += -I$(top_srcdir)/h2o
+#AM_CPPFLAGS += -I$(top_srcdir)/h2o/include
+#AM_CPPFLAGS += -I$(top_srcdir)/h2o
 endif
 
 if OCULUS_RIFT
@@ -49,8 +49,8 @@ common_ldadd += -lncursesw
 endif
 
 if USE_UV
-common_ldadd += $(top_builddir)/xdgmime/libxdgmime.la
-common_ldadd += $(top_builddir)/h2o/libh2o.la -lssl -lcrypto
+#common_ldadd += $(top_builddir)/xdgmime/libxdgmime.la
+#common_ldadd += $(top_builddir)/h2o/libh2o.la -lssl -lcrypto
 endif
 
 if EDITOR_ENABLED
